samples/_failures_safe/1761284932_2295e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_866da89d.c: In function ‘main’:
./samples/SAFE/__tmp_866da89d.c:157:5: error: expected expression at end of input
  157 |     int match = (input.size ==
      |     ^~~
./samples/SAFE/__tmp_866da89d.c:157:5: error: expected declaration or statement at end of input
